# MicroMazeMaster

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  settings.toml
.github/wheel/: onnxsim-0.4.36-cp311-cp311-linux_aarch64.whl
.github/workflows/: docker-build.yml
micromazemaster/: __init__.py
micromazemaster/models/: maze.py  mouse.py
micromazemaster/tools/cli/: __init__.py
micromazemaster/tools/cli/convert/: __init__.py
micromazemaster/tools/cli/train/: __init__.py
micromazemaster/tools/gui/: __init__.py
micromazemaster/utils/backtracker/: __init__.py
micromazemaster/utils/config/: __init__.py
micromazemaster/utils/dijkstra/: __init__.py
micromazemaster/utils/evolution/: __init__.py
micromazemaster/utils/preprocessing/: __init__.py
micromazemaster/utils/qlearning/: __init__.py  helper.py
micromazemaster/utils/sensors/: tof.py
micromazemaster/utils/tflite/: __init__.py
notebooks/: backtracker_example.ipynb  backtracker_visualized.py  deepqlearning_example.py  dijkstra.py  dql.py  dql_random_goal.py  dyn_movement.py  dyn_movement_test.py  dyn_movement_with_sensor_data.py  evolution.py  export_model_for_microcontroller_example.ipynb  hyperparameter_optimization.py  mazegenerator_example.ipynb  mouse_example.ipynb  mouse_example.py  policy_learning.py  qlearning_example.ipynb  random_path_finding.py  sensor_validation.py  tof_sensor_example.ipynb  unseen_maze_example.ipynb
notebooks/test_data/: test1_15.json  test2_15.json  test3_15.json  test4_15.json
src/micromazemaster/: __init__.py
src/micromazemaster/models/: maze.py
src/micromazemaster/tools/cli/: __init__.py
src/micromazemaster/tools/gui/: __init__.py
src/micromazemaster/utils/config/: __init__.py
src/micromazemaster/utils/logging/: __init__.py
src/micromazemaster/utils/qlearning/: __init__.py  helper.py
