[tool.poetry]
name = "micromazemaster"
version = "0.1.0"
description = ""
authors = ["Benjamin Langer <info@benjaminlanger.dev>"]
readme = "README.md"

[tool.poetry.scripts]
micromazemaster = "micromazemaster.tools.cli:micromazemaster_cli"
micromazemaster_gui = "micromazemaster.tools.gui:micromazemaster_gui"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.3"
typer = "^0.12.5"
dynaconf = "^3.2.6"
customtkinter = "^5.2.2"
pillow = "^11.0.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
jupyterlab = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["src"]
